cabal-version:   3.0

name:            lathe-time
version:         0.1.0.0
synopsis:        lathe + time
description:     Optional time dependency for the lathe package.
license:         BSD-3-Clause
license-file:    LICENSE
author:          Oleksii Divak
maintainer:      Oleksii Divak <frozenwitness@gmail.com>
category:        Parsing
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md


source-repository head
  type:     git
  location: https://github.com/BurningWitness/lathe.git
  subdir:   lathe-time


library
  build-depends:    base       >= 4.14     && < 5
                  , bytestring >= 0.11.2   && < 0.13
                  , lathe      >= 0.1      && < 0.2
                  , time       >= 1.11     && < 1.15

  hs-source-dirs:   src

  exposed-modules:  Builder.Lathe.Time

                    Parser.Lathe.Time

  ghc-options:      -Wall -Wcompat

  default-language: Haskell2010


test-suite properties
  type:             exitcode-stdio-1.0

  build-depends:    base
                  , bytestring
                  , hspec      >= 2 && < 3
                  , lathe
                  , lathe-time
                  , time

  main-is:          Main.hs

  other-modules:    Test.Lathe.Time

  hs-source-dirs:   test/properties

  ghc-options:      -Wall

  default-language: Haskell2010
