cabal-version:   3.0

name:            lathe
version:         0.1.0.0
synopsis:        Pure incremental byte parser.
description:
  Pure incremental byte parser,
  polymorphic on the error type and supporting incremental output.

license:         BSD-3-Clause
license-file:    LICENSE
author:          Oleksii Divak
maintainer:      Oleksii Divak <frozenwitness@gmail.com>
category:        Parsing
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md


source-repository head
  type:     git
  location: https://github.com/BurningWitness/lathe.git
  subdir:   lathe


library
  build-depends:    base       >= 4.14   && < 5
                  , bytestring >= 0.10.4 && < 0.13
                  , primitive  >= 0.7    && < 0.10
                  , text       >= 2      && < 2.2

  hs-source-dirs:   src

  exposed-modules:  Parser.Lathe
                    Parser.Lathe.Binary
                    Parser.Lathe.Encoding.UTF16
                    Parser.Lathe.Encoding.UTF32
                    Parser.Lathe.Encoding.UTF8
                    Parser.Lathe.Numeric.FixedWidth
                    Parser.Lathe.Numeric.Fractional
                    Parser.Lathe.Numeric.Integral
                    Parser.Lathe.Radix
                    Parser.Lathe.Unsafe

                    Parser.Lathe.Binary.Internal
                    Parser.Lathe.Numeric.FixedWidth.Internal

  other-modules:    Parser.Lathe.Internal
                    Parser.Lathe.Internal.Bitness
                    Parser.Lathe.Internal.ByteString
                    Parser.Lathe.Numeric.Internal
                    Parser.Lathe.Numeric.Integral.Internal

  ghc-options:      -Wall

  default-language: Haskell2010


test-suite properties
  type:             exitcode-stdio-1.0

  build-depends:    base
                  , bytestring
                  , lathe
                  , primitive
                  , hspec      >= 2     && < 3
                  , random     >= 1.2.0 && < 1.3

  main-is:          Main.hs

  other-modules:    Test.Lathe
                    Test.Lathe.Binary
                    Test.Lathe.Encoding.UTF16
                    Test.Lathe.Encoding.UTF32
                    Test.Lathe.Encoding.UTF8
                    Test.Lathe.Numeric.FixedWidth
                    Test.Lathe.Numeric.Fractional
                    Test.Lathe.Numeric.Integral
                    Test.Lathe.Radix

  hs-source-dirs:   test/properties

  ghc-options:      -Wall

  default-language: Haskell2010
